// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dialog > Dialog.vue > should renders OXD Dialog > Dialog 1`] = `
"<transition-stub data-v-83d025ba="" name="fade" appear="true" persisted="false" css="true">
  <div data-v-1799388b="" data-v-83d025ba="" role="dialog" class="oxd-overlay oxd-overlay--flex oxd-overlay--flex-centered">
    <!--
    :aria-labelledby="'dialogTitle_' + id"
    :aria-describedby="'dialogDesc_' + id"
    -->
    <div data-v-e5203e6f="" data-v-83d025ba="" class="oxd-dialog-container-default">
      <div data-v-e5203e6f="" class="oxd-dialog-container-default--inner">
        <div data-v-c53e196d="" data-v-83d025ba="" class="oxd-sheet oxd-sheet--rounded oxd-sheet--white oxd-dialog-sheet oxd-dialog-sheet--shadow oxd-dialog-sheet--gutters" role="document"><button data-v-d9ef0969="" data-v-83d025ba="" class="oxd-dialog-close-button oxd-dialog-close-button-position">×</button></div>
      </div>
    </div>
  </div>
</transition-stub>"
`;

exports[`Dialog > Dialog.vue > should renders OXD Dialog > Dialog dialogContainer-div 1`] = `
"<transition-stub data-v-83d025ba="" name="fade" appear="true" persisted="false" css="true">
  <div data-v-1799388b="" data-v-83d025ba="" role="dialog" class="oxd-overlay oxd-overlay--flex oxd-overlay--flex-centered">
    <!--
    :aria-labelledby="'dialogTitle_' + id"
    :aria-describedby="'dialogDesc_' + id"
    -->
    <div data-v-83d025ba="">
      <div data-v-c53e196d="" data-v-83d025ba="" class="oxd-sheet oxd-sheet--rounded oxd-sheet--white oxd-dialog-sheet oxd-dialog-sheet--shadow oxd-dialog-sheet--gutters" show="true" role="document"><button data-v-d9ef0969="" data-v-83d025ba="" class="oxd-dialog-close-button oxd-dialog-close-button-position">×</button></div>
    </div>
  </div>
</transition-stub>"
`;

exports[`Dialog > Dialog.vue > should renders OXD Dialog > Dialog no shadow 1`] = `
"<transition-stub data-v-83d025ba="" name="fade" appear="true" persisted="false" css="true">
  <div data-v-1799388b="" data-v-83d025ba="" role="dialog" class="oxd-overlay oxd-overlay--flex oxd-overlay--flex-centered">
    <!--
    :aria-labelledby="'dialogTitle_' + id"
    :aria-describedby="'dialogDesc_' + id"
    -->
    <div data-v-e5203e6f="" data-v-83d025ba="" class="oxd-dialog-container-default">
      <div data-v-e5203e6f="" class="oxd-dialog-container-default--inner">
        <div data-v-c53e196d="" data-v-83d025ba="" class="oxd-sheet oxd-sheet--rounded oxd-sheet--white oxd-dialog-sheet oxd-dialog-sheet--gutters" show="true" role="document"><button data-v-d9ef0969="" data-v-83d025ba="" class="oxd-dialog-close-button oxd-dialog-close-button-position">×</button></div>
      </div>
    </div>
  </div>
</transition-stub>"
`;

exports[`Dialog > Dialog.vue > should renders OXD Dialog > Dialog persistent 1`] = `
"<transition-stub data-v-83d025ba="" name="fade" appear="true" persisted="false" css="true">
  <div data-v-1799388b="" data-v-83d025ba="" role="dialog" class="oxd-overlay oxd-overlay--flex oxd-overlay--flex-centered">
    <!--
    :aria-labelledby="'dialogTitle_' + id"
    :aria-describedby="'dialogDesc_' + id"
    -->
    <div data-v-e5203e6f="" data-v-83d025ba="" class="oxd-dialog-container-default">
      <div data-v-e5203e6f="" class="oxd-dialog-container-default--inner">
        <div data-v-c53e196d="" data-v-83d025ba="" class="oxd-sheet oxd-sheet--rounded oxd-sheet--white oxd-dialog-sheet oxd-dialog-sheet--shadow oxd-dialog-sheet--gutters" show="true" role="document"><button data-v-d9ef0969="" data-v-83d025ba="" class="oxd-dialog-close-button oxd-dialog-close-button-position">×</button></div>
      </div>
    </div>
  </div>
</transition-stub>"
`;

exports[`Dialog > Dialog.vue > should renders OXD Dialog > Dialog show 1`] = `
"<transition-stub data-v-83d025ba="" name="fade" appear="true" persisted="false" css="true">
  <div data-v-1799388b="" data-v-83d025ba="" role="dialog" class="oxd-overlay oxd-overlay--flex oxd-overlay--flex-centered">
    <!--
    :aria-labelledby="'dialogTitle_' + id"
    :aria-describedby="'dialogDesc_' + id"
    -->
    <div data-v-e5203e6f="" data-v-83d025ba="" class="oxd-dialog-container-default">
      <div data-v-e5203e6f="" class="oxd-dialog-container-default--inner">
        <div data-v-c53e196d="" data-v-83d025ba="" class="oxd-sheet oxd-sheet--rounded oxd-sheet--white oxd-dialog-sheet oxd-dialog-sheet--shadow oxd-dialog-sheet--gutters" show="true" role="document"><button data-v-d9ef0969="" data-v-83d025ba="" class="oxd-dialog-close-button oxd-dialog-close-button-position">×</button></div>
      </div>
    </div>
  </div>
</transition-stub>"
`;

exports[`Dialog > Dialog.vue > should renders OXD Dialog > Dialog witout close 1`] = `
"<transition-stub data-v-83d025ba="" name="fade" appear="true" persisted="false" css="true">
  <div data-v-1799388b="" data-v-83d025ba="" role="dialog" class="oxd-overlay oxd-overlay--flex oxd-overlay--flex-centered">
    <!--
    :aria-labelledby="'dialogTitle_' + id"
    :aria-describedby="'dialogDesc_' + id"
    -->
    <div data-v-e5203e6f="" data-v-83d025ba="" class="oxd-dialog-container-default">
      <div data-v-e5203e6f="" class="oxd-dialog-container-default--inner">
        <div data-v-c53e196d="" data-v-83d025ba="" class="oxd-sheet oxd-sheet--rounded oxd-sheet--white oxd-dialog-sheet oxd-dialog-sheet--shadow oxd-dialog-sheet--gutters" show="true" role="document"></div>
      </div>
    </div>
  </div>
</transition-stub>"
`;
